[FIX] Fix overlapping CSS media queries - make sure the "max-width" of one section is 1px less than the "min-width" of the section one size up

--- a/src/app/network/network.less
+++ b/src/app/network/network.less
@@ -205,8 +205,7 @@
 }
 
 /* computer */
-@media all and (max-width: 1280px) and (min-width: 840px) {
-
+@media all and (max-width: 1279px) and (min-width: 840px) {
   #world {
     margin-left: auto;
     margin-right:auto;
@@ -227,8 +226,7 @@
 }
 
 /* tablet */
-@media all and (max-width: 840px) and (min-width: 480px) {
-
+@media all and (max-width: 839px) and (min-width: 480px) {
   #world {
     margin-left: 0;
     margin-right: 0;
@@ -251,7 +249,7 @@
 }
 
 /* mobile */
-@media all and (max-width: 480px) {
+@media all and (max-width: 479px) {
   #world {
     display: none;
   }
